# vulnflow

./: LICENSE  README.md  __init__.py  docker-compose.test.yaml  pyproject.toml  report-testphp.html  report.html  requirements.txt  run_scan.py  scan_dvwa.py  scan_profile.py  test_save_pages.py
api/: main.py
cli/: main-now.py  main.py
config/: scan_profiles.py
crawled_pages/: 192.168.192.138_42000____metadata.txt
crawler/: __init__.py  spa_spider.py  spider.py
detector/: __init__.py  tech_fingerprint.py
detector/enhancements/: false_positive_filter.py  groq_enhanced.py
remediation/: __init__.py  engine.py
reports/: __init__.py  generator.py
scanner/: __init__.py  async_utils.py  base.py  enhanced_vuln_scanner.py  fast_scanner.py  parallel_executor.py  scheduler.py  vuln_scanner.py
scanner/a01_access_control/: csrf.py  forced_browsing.py  jwt_vulnerabilities.py  path_traversal.py  privilege_escalation.py  ssrf.py
scanner/a02_misconfig/: backup.py  config_exposure.py  cookie_security.py  debug.py  default_credentials.py  headers.py  information_disclosure.py
scanner/a03_supply_chain/: __init__.py  integrity_check.py
scanner/a04_cryptographic/: __init__.py
scanner/a05_injection/: __init__.py  cmdi.py  code_injection.py  crlf.py  dom_xss.py  el_injection.py  ldapi.py  sqli_playwright.py  ssti.py  xss.py  xss_playwright.py  xxe.py
scanner/a06_insecure_design/: __init__.py  business_logic.py  clickjacking.py  file_upload.py  http_smuggling.py  race_condition.py  trust_boundary.py
scanner/a07_authentication/: __init__.py  auth_bypass.py  default_credentials.py  mfa_check.py  password_recovery.py  session_fixation.py  session_management.py
scanner/a08_deserialization/: __init__.py  code_integrity.py  cookie_integrity.py  insecure_deserialization.py  subresource_integrity.py
scanner/a09_logging/: __init__.py  alert_detection.py  insufficient_logging.py  log_file_exposure.py  log_injection.py  sensitive_log_data.py
scanner/a10_exceptional_conditions/: __init__.py  error_handling.py  resource_limits.py
scanner/access_control/: __init__.py  csrf.py  forced_browsing.py  idor.py  jwt_vulnerabilities.py  open_redirect.py  path_traversal.py
scanner/ai/: __init__.py  attack_chain_analyzer.py  groq_analyzer.py  payload_generator.py  recon_agent.py
scanner/api_security/: __init__.py  graphql.py  mass_assignment.py  rate_limiting.py
scanner/authentication/: __init__.py  brute_force.py  weak_password.py
scanner/cryptographic/: sensitive_data_exposure.py  weak_crypto.py
scanner/cve/: __init.py  known_cve.py
scanner/deserialization/: __init__.py
scanner/exceptional_conditions/: fail_open.py
scanner/injection/: __init__.py  cmdi.py  crlf.py  dom_xss.py  hhi.py  ldapi.py  nosqli.py  sqli.py  ssti.py  xpath.py
scanner/misconfig/: __init__.py  backup.py  config_exposure.py  cookie_security.py  cors.py  debug.py  headers.py  information_disclosure.py  ssl_tls.py
scanner/ssrf/: __init__.py  ssrf.py
scanner/supply_chain/: dependency_check.py  integrity_check.py  outdated_components.py
scanner/xss/: __init__.py  dom_xss.py  xss.py
scanner/xxe/: __init__.py  xxe.py
test_app/: vulnerable.py
tests/: conftest.py  test_detection_accuracy.py  test_scanners.py
tests/integration/: test_against_vulnerable_apps.py
tests/security/: test_vulnflow_security.py
vulnflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
